; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfextract.c_isimage.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfextract.c_isimage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx = common dso_local global i32 0, align 4
@Subtype = common dso_local global i32 0, align 4
@Image = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @isimage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isimage(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @ctx, align 4
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @Subtype, align 4
  %7 = call i32 @PDF_NAME(i32 %6)
  %8 = call i32* @pdf_dict_get(i32 %4, i32* %5, i32 %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32, i32* @ctx, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @Image, align 4
  %12 = call i32 @PDF_NAME(i32 %11)
  %13 = call i32 @pdf_name_eq(i32 %9, i32* %10, i32 %12)
  ret i32 %13
}

declare dso_local i32* @pdf_dict_get(i32, i32*, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_name_eq(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
